# gudev-sharp

./: .gitignore  Makefile.am  NEWS  README  configure.ac  configure.in  gudev-sharp-1.0.pc.in  gudev-sharp-3.0.pc.in  gudev-sharp.snk
gudev/: AssemblyInfo.cs.in  Makefile.am  gudev-api.raw  gudev-sharp.dll.config.in  gudev.metadata
samples/: Makefile  TestGUDev.cs
sources/: gudev-sharp.sources
