AC_INIT(gudev-sharp, 0.2)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(gudev-sharp-1.0, 0.2)
AM_MAINTAINER_MODE

API_VERSION=1.0.0.0
AC_SUBST(API_VERSION)

AC_MSG_CHECKING([whether we're compiling from bzr])
if test -f "$srcdir/.bzr" ; then
	from_bzr=yes
else
	from_bzr=no
fi

AC_MSG_RESULT($from_bzr)

AC_SUBST(PATH)
AC_SUBST(LD_LIBRARY_PATH)

dnl Find pkg-config
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" = "xno"; then
        AC_MSG_ERROR([You need to install pkg-config])
fi

dnl Find GTK
BUILD_GTK_CFLAGS=`$PKG_CONFIG --cflags gtk+-3.0`
BUILD_GTK_LIBS=`$PKG_CONFIG --libs gtk+-3.0`
AC_SUBST(BUILD_GTK_CFLAGS)
AC_SUBST(BUILD_GTK_LIBS)

GTK_REQUIRED_VERSION=3.0.0
MONO_REQUIRED_VERSION=2.0
UDEV_REQUIRED_VERSION=146

PKG_CHECK_MODULES(BASE_DEPENDENCIES, gtk+-3.0 >= $GTK_REQUIRED_VERSION gudev-1.0 >= $UDEV_REQUIRED_VERSION)
PKG_CHECK_MODULES(MONO_DEPENDENCY, mono >= $MONO_REQUIRED_VERSION, has_mono=true, has_mono=false)

GENERATED_SOURCES=generated/*.cs
AC_PATH_PROG(RUNTIME, mono, no)
AC_PATH_PROG(CSC, gmcs, no)
LIB_PREFIX=.so
LIB_SUFFIX=

AC_SUBST(GENERATED_SOURCES)
AC_SUBST(LIB_PREFIX)
AC_SUBST(LIB_SUFFIX)

AC_SUBST(BASE_DEPENDENCIES_CFLAGS)
AC_SUBST(BASE_DEPENDENCIES_LIBS)

dnl Find Gtk#
PKG_CHECK_MODULES(GTK_SHARP, gtk-sharp-3.0 >= 2.99.0)
AC_SUBST(GTK_SHARP_CFLAGS)
AC_SUBST(GTK_SHARP_LIBS)

dnl Find GAPI
PKG_CHECK_MODULES(GAPI, gapi-3.0 >= 2.99.0)

AC_PATH_PROG(GACUTIL, gacutil, no)
if test "x$GACUTIL" = "xno" ; then
        AC_MSG_ERROR([No gacutil tool found])
fi

AC_SUBST(GACUTIL)

AC_OUTPUT([
Makefile
gudev/gudev-sharp.dll.config
gudev/Makefile
gudev/AssemblyInfo.cs
gudev-sharp-1.0.pc
])
